@@ -648,6 +648,8 @@ struct text_object *construct_text_object(const char *s, const char *arg, long
 		scan_pid_cmdline_arg(obj, arg, free_at_crash);
 	END OBJ_ARG(pid_cwd, 0, "pid_cwd needs a pid as argument")
 		scan_pid_cwd_arg(obj, arg, free_at_crash);
+	END OBJ_ARG(pid_environ, 0, "pid_environ needs arguments")
+		scan_pid_environ_arg(obj, arg, free_at_crash);
 	END OBJ(processes, &update_total_processes)
 	END OBJ(running_processes, &update_running_processes)
 	END OBJ(threads, &update_threads)
@@ -1245,6 +1247,9 @@ void free_text_objects(struct text_object *root, int internal)
 				break;
 			case OBJ_pid_cwd:
 				free(data.s);
+				break;
+			case OBJ_pid_environ:
+				free_pid_environ(obj);
 				break;
 			case OBJ_read_tcp:
 				free_read_tcp(obj);
