@@ -237,6 +237,7 @@ enum text_object_type {
 	OBJ_pre_exec,
 	OBJ_pid_cmdline,
 	OBJ_pid_cwd,
+	OBJ_pid_environ,
 	OBJ_processes,
 	OBJ_running_processes,
 	OBJ_shadecolor,
